--- a/client/chat.scss
+++ b/client/chat.scss
@@ -184,13 +184,19 @@
     height: 120px;
 
     @media (max-width: 760px) {
-      max-height: 100px;
-      width: 85%;
+      max-height: 102px;
+      //width: 85%;
   }
     //  background: url('/gif.gif);
   }
 
   .slick-slide {
+  }
+
+  .slick-next {
+    @media (max-width: 760px) {
+    display: none;
+    }
   }
 
 }
